# work-pulse

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
core/: models.py  scrapers.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_project_options_alter_project_url.py  0003_alter_project_description.py  0004_alter_project_description_alter_project_url.py  0005_alter_project_url.py  0006_alter_project_viewed_field.py
core/templatetags/: core_extra.py
static/css/: app.css  tabler.css
static/img/: logo.xcf  site.webmanifest
static/js/: apexcharts.min.js  app.js
templates/: base.html
templates/core/: home.html  projects-archive.html  stats.html
templates/core/includes/: project-count-card.html
templates/includes/: footer.html  navbar.html
users/migrations/: 0001_initial.py
